# Studying

./: Beginning  Beginning.pub
begin/52300057/: 52300057_NTSang_Lab01.py  test.py
begin/52300057_NTSang_Lab01/: bai1.java  bai2.java  bai3.java  bai4.java  bai5.java  tempCodeRunnerFile.java
begin/52300057_NTSang_Lab03/: bai1.java  bai2.java  bai3.java  bai4.java
begin/52300057_NTSang_Lab04/: Fraction.java  Point2D.java  Student.java  Triangle.java
begin/C/: 1.c  ankngoc.cpp  armstrong.c  challenge.c  phuongtich.c  test.c
begin/C++/OOPS/: Polymorphism.cpp  VariableHiding.cpp  constructor.cpp  destructor.cpp  encapsulation.cpp  inheritance.cpp  napchong.cpp  shorthandOpe.cpp  (+1 more)
begin/baitaplon/: 52300057.c  baitaplon  input.inp  output.out  test.c
begin/dstt/: 52300057_NTSang_Cau9.py  52300057_NTSang_Lab01.py  52300057_NTSang_Lab03.py  52300057_NTSang_Lab04.py  test.py
begin/html-css/: project1.html  project2.html  project3.html
begin/oopJava/: Bai1.java
begin/output/: 1  2  3  4  im  test
begin/pythonhomework/: 4.py  52300057.py  NTSang_52300057_Lab08.py  lab04.py  testgpt.py
learningSFML/: CMakeCache.txt  CMakeLists.txt  Makefile  SFMLProject  SFMLProjectt  cmake_install.cmake  main.cpp  map.txt  math.cpp  player.cpp  skeleton.cpp
learningSFML/Assets/Map/: Map1.txt
learningSFML/characters/: bullet.h  frameRate.h  player.h  skeleton.h
learningSFML/output/: main
learningSFML/src/: bullet.cpp  frameRate.cpp  main.cpp  map.cpp  mapLoader.cpp  player.cpp  skeleton.cpp
learningSFML/src/characters/: map.h  mapData.h  mapLoader.h  math.h  tile.h
(+279 files in other folders)
